--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -106,20 +106,24 @@
     <string name="video">影片</string>
     <string name="picker_subtitle">這個應用程式只能存取您所選擇的相片</string>
     <string name="close">關閉</string>
-    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
-    <string name="skip">Skip</string>
-    <string name="allow">Allow</string>
-    <string name="all">All</string>
-    <string name="secure_mode_title">Secure Mode</string>
-    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
-    <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
-    <string name="customization">Customization</string>
-    <string name="album_card_size_title">Album Card Size</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
+    <string name="manage_media_title">允許相片庫管理您的媒體</string>
+    <string name="manage_media_summary">此設定將在執行各種動作（如標記為喜愛）時跳過任何額外的確認對話方塊。</string>
+    <string name="skip">跳過</string>
+    <string name="allow">允許</string>
+    <string name="all">全部</string>
+    <string name="secure_mode_title">安全模式</string>
+    <string name="secure_mode_summary">在退出應用程式時隱藏預覽</string>
+    <string name="rotate_screen_cd">旋轉螢幕</string>
+    <string name="size_dp">%1$s 像素</string>
+    <string name="change_album_size">變更相簿卡片大小</string>
+    <string name="reset">重設</string>
+    <string name="customization">自訂</string>
+    <string name="album_card_size_title">相簿卡片大小</string>
+    <string name="album_card_size_summary">手動選擇您的相簿卡片大小</string>
+    <string name="set_wallpaper">桌布</string>
+    <string name="set_wallpaper_error">無法設定桌布，沒有可用的應用程式！</string>
+    <string name="monthly_timeline_title">Monthly Timeline</string>
+    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
     <plurals name="item_count">
         <item quantity="other">%s 個項目</item>
     </plurals>
