New Crowdin updates (#120)
* New translations strings.xml (Italian)

* New translations strings.xml (German)

* New translations strings.xml (Czech)

* New translations strings.xml (Czech)

* New translations strings.xml (Czech)

* New translations strings.xml (Italian)

* New translations strings.xml (German)

* New translations strings.xml (Czech)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Danish)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Galician)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Odia)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Romanian)

* New translations strings.xml (Romanian)

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -113,17 +113,19 @@
     <string name="all">Alle</string>
     <string name="secure_mode_title">Sicherer Modus</string>
     <string name="secure_mode_summary">Ausblenden der Anwendungsvorschau beim Beenden der Anwendung</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="rotate_screen_cd">Bildschirm drehen</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
-    <string name="customization">Customization</string>
-    <string name="album_card_size_title">Album Card Size</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
-    <string name="monthly_timeline_title">Monthly Timeline</string>
-    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
+    <string name="change_album_size">Albumkartengröße ändern</string>
+    <string name="reset">Zurücksetzen</string>
+    <string name="customization">Anpassung</string>
+    <string name="album_card_size_title">Albumkartengröße</string>
+    <string name="album_card_size_summary">Manuelles Auswählen der Größe der Albumkarte</string>
+    <string name="set_wallpaper">Hintergrundbild</string>
+    <string name="set_wallpaper_error">Hintergrundbild einstellen nicht möglich, keine Anwendung verfügbar!</string>
+    <string name="monthly_timeline_title">Monatliche Zeitleiste</string>
+    <string name="monthly_timeline_summary">Gruppieren der Zeitleiste monatlich statt pro Datum (Neustart der App)</string>
+    <string name="amoled_mode_title">Use Amoled Mode</string>
+    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
     <plurals name="item_count">
         <item quantity="one">%s Datei</item>
         <item quantity="other">%s Dateien</item>
