--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -116,14 +116,16 @@
     <string name="rotate_screen_cd">Rotate Screen</string>
     <string name="size_dp">%1$sdp</string>
     <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
-    <string name="customization">Customization</string>
+    <string name="reset">Resetta</string>
+    <string name="customization">Personalizzazione</string>
     <string name="album_card_size_title">Album Card Size</string>
     <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
+    <string name="set_wallpaper">Sfondo</string>
+    <string name="set_wallpaper_error">Impossibile impostare lo sfondo, nessuna app disponibile</string>
     <string name="monthly_timeline_title">Monthly Timeline</string>
     <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
+    <string name="amoled_mode_title">Use Amoled Mode</string>
+    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
     <plurals name="item_count">
         <item quantity="one">%s elemento</item>
         <item quantity="other">%s elementi</item>
