--- a/app/src/main/res/values-ro-rRO/strings.xml
+++ b/app/src/main/res/values-ro-rRO/strings.xml
@@ -97,33 +97,35 @@
     <string name="selection_dialog_close_cd">Închide dialogul de selecție</string>
     <string name="edit">Editează</string>
     <string name="trash_deletion_warning">Fotografiile și videoclipurile pe care le ștergi vor fi eliminate după 30 de zile.</string>
-    <string name="open_with">Open with</string>
-    <string name="select">Select</string>
-    <string name="photos_and_videos">Photos and Videos</string>
-    <string name="photos">Photos</string>
-    <string name="videos">Videos</string>
-    <string name="photo">Photo</string>
-    <string name="video">Video</string>
-    <string name="picker_subtitle">This app can only access the photos you select</string>
-    <string name="close">Close</string>
-    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
-    <string name="skip">Skip</string>
-    <string name="allow">Allow</string>
-    <string name="all">All</string>
-    <string name="secure_mode_title">Secure Mode</string>
-    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="open_with">Deschideți cu</string>
+    <string name="select">Selectați</string>
+    <string name="photos_and_videos">Fotografii și videoclipuri</string>
+    <string name="photos">Fotografii</string>
+    <string name="videos">Videoclipuri</string>
+    <string name="photo">Fotografie</string>
+    <string name="video">Videoclip</string>
+    <string name="picker_subtitle">Aplicația poate accesa doar fotografiile pe care le selectezi</string>
+    <string name="close">Închideți</string>
+    <string name="manage_media_title">Permiteți ca Galerie să vă gestioneze fișierele media</string>
+    <string name="manage_media_summary">Această setare permite să se sară peste orice dialoguri de confirmare suplimentare în timpul efectuării diferitelor acțiuni, cum ar fi marcarea ca favorit.</string>
+    <string name="skip">Ocoliți</string>
+    <string name="allow">Permiteți</string>
+    <string name="all">Toate</string>
+    <string name="secure_mode_title">Mod securizat</string>
+    <string name="secure_mode_summary">Ascundeți previzualizarea aplicației atunci când ieșiți din ea</string>
+    <string name="rotate_screen_cd">Rotiți ecranul</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
-    <string name="customization">Customization</string>
-    <string name="album_card_size_title">Album Card Size</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
-    <string name="monthly_timeline_title">Monthly Timeline</string>
-    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
+    <string name="change_album_size">Modificați dimensiunea cardului de album</string>
+    <string name="reset">Resetați</string>
+    <string name="customization">Personalizare</string>
+    <string name="album_card_size_title">Dimensiunea cardului de album</string>
+    <string name="album_card_size_summary">Alegeți manual dimensiunea cardului de album</string>
+    <string name="set_wallpaper">Imagine de fundal</string>
+    <string name="set_wallpaper_error">Nu se poate seta ca imagine de fundal, nu există nicio aplicație disponibilă!</string>
+    <string name="monthly_timeline_title">Cronologie lunară</string>
+    <string name="monthly_timeline_summary">Grupați cronologia lunar în loc de pe date (Aplicația va reporni)</string>
+    <string name="amoled_mode_title">Folosiți Modul Amoled</string>
+    <string name="amoled_mode_summary">Contrast mare, cel mai potrivit pentru ecranele Amoled</string>
     <plurals name="item_count">
         <item quantity="one">%s articol</item>
         <item quantity="few">%s articole</item>
