--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -1,133 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="share">Share</string>
-    <string name="info">Info</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
-    <string name="date">Date</string>
+    <string name="app_name">Galerie</string>
+    <string name="nav_albums">Alba</string>
+    <string name="searchbar_title"><![CDATA[Hledat fotky a videa]]></string>
+    <string name="header_today">Dnes</string>
+    <string name="header_yesterday">Včera</string>
+    <string name="share_media">Sdílet</string>
+    <string name="request_permissions">Požádat o oprávnění</string>
+    <string name="filter">Filtr</string>
+    <string name="filter_recent">Nedávné</string>
+    <string name="filter_nameAZ">Název (A-Z)</string>
+    <string name="filter_nameZA">Název (Z-A)</string>
+    <string name="filter_old">Staré</string>
+    <string name="selected_s">Vybráno %s</string>
+    <string name="trash">Koš</string>
+    <string name="pause_video">Pozastavit video</string>
+    <string name="play_video">Přehrát video</string>
+    <string name="favorites">Oblíbené</string>
+    <string name="no_media_title">Vypadá to, že je tu prázdno</string>
+    <string name="no_media_cd">Nenalezena žádná média</string>
+    <string name="empty_trash_title">Voňavě čisté</string>
+    <string name="empty_trash_cd">Koš je prázdný</string>
+    <string name="error_title">Něco se pokazilo :(</string>
+    <string name="error_cd">Došlo k chybě</string>
+    <string name="copy_error">Chyba kopírování</string>
+    <string name="trash_restore">Obnovit</string>
+    <string name="trash_empty">Prázdné</string>
+    <string name="trash_delete">Odstranit</string>
+    <string name="share">Sdílet</string>
+    <string name="info">Informace</string>
+    <string name="remove_selected">Odstranit vybrané</string>
+    <string name="remove_all">Odstranit vše</string>
+    <string name="empty_favorites_title">Nemáte žádné oblíbené</string>
+    <string name="label">Štítek</string>
+    <string name="path">Cesta</string>
+    <string name="date">Datum</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">KB</string>
     <string name="mb">MB</string>
     <string name="gb">GB</string>
     <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
-    <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
-    <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location">Location</string>
-    <string name="location_cd">Media Location</string>
-    <string name="location_map_cd">Location Map</string>
-    <string name="app_dev">by %s</string>
+    <string name="select_all">Vybrat vše</string>
+    <string name="unselect_all">Zrušit výběr všeho</string>
+    <string name="drop_down_cd">Rozbalit</string>
+    <string name="back_cd">Zpět</string>
+    <string name="settings_title">Nastavení</string>
+    <string name="reset_settings">Resetovat nastavení</string>
+    <string name="settings_general">Obecné</string>
+    <string name="settings_trash_title">Použít koš</string>
+    <string name="settings_trash_summary">Uchovávat odstraněná média po dobu 30 dní.\nPři zakázání možnosti o položku při odstranění navždy přijdete.</string>
+    <string name="settings_about_app_title">O aplikaci Galerie</string>
+    <string name="settings_about_app_summary">Verze %s</string>
+    <string name="move_album_to_trash">Přesunout album do koše</string>
+    <string name="pinned_albums_title">Připnutá alba</string>
+    <string name="unpin">Odepnout</string>
+    <string name="pin">Připnout</string>
+    <string name="nav_timeline">Časová osa</string>
+    <string name="location">Umístění</string>
+    <string name="location_cd">Umístění médií</string>
+    <string name="location_map_cd">Mapa umístění</string>
+    <string name="app_dev">od %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
-    <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate">Přispět</string>
+    <string name="github">GitHub</string>
+    <string name="donate_button_cd">Tlačítko přispění</string>
+    <string name="github_button_cd">Tlačítko GitHub</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="settings_cache">Cache</string>
-    <string name="settings_disk_cache_title">Disk cache size</string>
-    <string name="settings_cached_screen_title">Cached screen count</string>
-    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
-    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
-    <string name="use_as">Use as</string>
-    <string name="set_as">"Set as: "</string>
-    <string name="delete_dialog_title">You\'re about to delete %s items</string>
-    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
-    <string name="action_cancel">Cancel</string>
-    <string name="action_confirm">Confirm</string>
-    <string name="action_confirmed">Confirmed</string>
-    <string name="restore_dialog_title">You\'re about to restore %s items</string>
-    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
-    <string name="trash_dialog_title">You\'re about to trash %s items</string>
-    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
-    <string name="history_delete">Delete item</string>
-    <string name="history_recent_title">Recent</string>
-    <string name="history_suggestions_title">Suggestions</string>
-    <string name="no_media_found">No media found</string>
-    <string name="image_add_description">Add a description</string>
-    <string name="edit_cd">edit</string>
-    <string name="edit_location_cd">Edit location</string>
-    <string name="add_location_cd">Add location</string>
-    <string name="settings_theme_header">Theme</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
-    <string name="edit">Edit</string>
-    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
-    <string name="open_with">Open with</string>
-    <string name="select">Select</string>
-    <string name="photos_and_videos">Photos and Videos</string>
-    <string name="photos">Photos</string>
-    <string name="videos">Videos</string>
-    <string name="photo">Photo</string>
+    <string name="settings_cache">Mezipaměť</string>
+    <string name="settings_disk_cache_title">Velikost mezipaměti disku</string>
+    <string name="settings_cached_screen_title">Počet miniatur v mezipaměti</string>
+    <string name="settings_cached_screen_summary">Kolik miniatur médií je uloženo v paměti</string>
+    <string name="settings_disk_cache_summary">Kolik místa v úložišti lze využít pro trvalé ukládání do mezipaměti</string>
+    <string name="use_as">Použít jako</string>
+    <string name="set_as">"Nastavit jako: "</string>
+    <string name="delete_dialog_title">Chystáte se odstranit %s položek</string>
+    <string name="delete_dialog_title_confirmation">Odstraňování %s položek...</string>
+    <string name="action_cancel">Zrušit</string>
+    <string name="action_confirm">Potvrdit</string>
+    <string name="action_confirmed">Potvrzeno</string>
+    <string name="restore_dialog_title">Chystáte se obnovit %s položek</string>
+    <string name="restore_dialog_title_confirmation">Obnovování %s položek…</string>
+    <string name="trash_dialog_title">Chystáte se vyhodit %s položek</string>
+    <string name="trash_dialog_title_confirmation">Přesouvání %s položek do koše…</string>
+    <string name="history_delete">Odstranit položku</string>
+    <string name="history_recent_title">Nedávné</string>
+    <string name="history_suggestions_title">Návrhy</string>
+    <string name="no_media_found">Nenalezena žádná média</string>
+    <string name="image_add_description">Přidat popis</string>
+    <string name="edit_cd">upravit</string>
+    <string name="edit_location_cd">Upravit umístění</string>
+    <string name="add_location_cd">Přidat umístění</string>
+    <string name="settings_theme_header">Motiv</string>
+    <string name="settings_follow_system_theme_title">Podle systému</string>
+    <string name="settings_dark_mode_title">Použít tmavý režim</string>
+    <string name="selection_dialog_close_cd">Zavřít dialogové okno výběru</string>
+    <string name="edit">Upravit</string>
+    <string name="trash_deletion_warning">Fotky a videa, která odstraníte, budou po 30 dnech smazány.</string>
+    <string name="open_with">Otevřít pomocí</string>
+    <string name="select">Vybrat</string>
+    <string name="photos_and_videos">Fotky a videa</string>
+    <string name="photos">Fotky</string>
+    <string name="videos">Videa</string>
+    <string name="photo">Fotka</string>
     <string name="video">Video</string>
-    <string name="picker_subtitle">This app can only access the photos you select</string>
-    <string name="close">Close</string>
-    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
-    <string name="skip">Skip</string>
-    <string name="allow">Allow</string>
-    <string name="all">All</string>
-    <string name="secure_mode_title">Secure Mode</string>
-    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="picker_subtitle">Tato aplikace má přístup pouze k vybraným fotkám</string>
+    <string name="close">Zavřít</string>
+    <string name="manage_media_title">Povolte aplikaci Galerie spravovat vaše média</string>
+    <string name="manage_media_summary">Toto nastavení pouze přeskočí další potvrzovací dialogy při provádění různých akcí, jako je například označení položky jako oblíbené.</string>
+    <string name="skip">Přeskočit</string>
+    <string name="allow">Povolit</string>
+    <string name="all">Vše</string>
+    <string name="secure_mode_title">Bezpečný režim</string>
+    <string name="secure_mode_summary">Skrýt náhled aplikace při jejím ukončení</string>
+    <string name="rotate_screen_cd">Otáčení obrazovky</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
-    <string name="customization">Customization</string>
-    <string name="album_card_size_title">Album Card Size</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
-    <string name="monthly_timeline_title">Monthly Timeline</string>
-    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
+    <string name="change_album_size">Změnit velikost karty alba</string>
+    <string name="reset">Resetovat</string>
+    <string name="customization">Přizpůsobení</string>
+    <string name="album_card_size_title">Velikost karty alba</string>
+    <string name="album_card_size_summary">Ruční výběr velikosti karty alba</string>
+    <string name="set_wallpaper">Pozadí</string>
+    <string name="set_wallpaper_error">Nelze nastavit jako pozadí, není k dispozici žádná aplikace!</string>
+    <string name="monthly_timeline_title">Měsíční časová osa</string>
+    <string name="monthly_timeline_summary">Seskupit časovou osu měsíčně místo podle data (restartuje aplikaci)</string>
+    <string name="amoled_mode_title">Use Amoled Mode</string>
+    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
     <plurals name="item_count">
-        <item quantity="one">%s item</item>
-        <item quantity="few">%s items</item>
-        <item quantity="many">%s items</item>
-        <item quantity="other">%s items</item>
+        <item quantity="one">%s položka</item>
+        <item quantity="few">%s položky</item>
+        <item quantity="many">%s položek</item>
+        <item quantity="other">%s položek</item>
     </plurals>
 </resources>
