Gallery: Improve Trash Dialog
New UI
Warn about media that cannot be moved to trash
Allow user to remove 'to-be-deleted' items post-selection

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,6 +132,16 @@
     <string name="date_modified">Date Modified</string>
     <string name="edit_metadata">Edit Metadata</string>
     <string name="apply">Apply</string>
+    <string name="dialog_to_trash">Moving to Trash</string>
+    <string name="dialog_delete">Deleting Permanently</string>
+    <string name="s_items">%1$s items</string>
+    <string name="trashing_items">Trashing %1$s items..</string>
+    <string name="deleting_items">Deleting %1$s items...</string>
+    <string name="long_press_to_remove">Long press to remove</string>
+    <string name="dialog_from_trash">Restoring from Trash</string>
+    <string name="restoring_items">Restoring %1$s items..</string>
+    <string name="trash_incompatible_title">Some items cannot be trashed!</string>
+    <string name="trash_incompatible_summary">Such items will be deleted permanently instead.</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
