Gallery: Add 'Move to another album' sheet
Allow moving media to another album

Limitations of the Media Store without requiring more perimssions:
- Can't move media from/to Albums under Internal Storage/Android/*
- Can't move media from/to external storage to/from internal storage

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,8 @@
     <string name="remove_metadata">Remove Metadata</string>
     <string name="remove_location">Remove Location</string>
     <string name="description">Description</string>
+    <string name="move_to_another_album">Move to another album</string>
+    <string name="move">Move</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
