Update russian translation

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -16,9 +16,9 @@
     <string name="pause_video">Поставить на паузу</string>
     <string name="play_video">Воспроизвести</string>
     <string name="favorites">Избранное</string>
-    <string name="no_media_title">Похоже здесь пусто</string>
+    <string name="no_media_title">Похоже, здесь пусто</string>
     <string name="no_media_cd">Медиафайлы отсутствуют</string>
-    <string name="empty_trash_title">Чисто как в аптеке</string>
+    <string name="empty_trash_title">Чисто, как в аптеке</string>
     <string name="empty_trash_cd">Корзина пуста</string>
     <string name="error_title">Что-то пошло не так :(</string>
     <string name="error_cd">Произошла ошибка</string>
@@ -39,7 +39,7 @@
     <string name="metadata">Метаданные</string>
     <string name="select_all">Выбрать все</string>
     <string name="unselect_all">Отменить выбор</string>
-    <string name="drop_down_cd">Провалиться</string>
+    <string name="drop_down_cd">Опуститься</string>
     <string name="back_cd">Назад</string>
     <string name="settings_title">Параметры</string>
     <string name="settings_general">Основные</string>
@@ -84,47 +84,47 @@
     <string name="photo">Фото</string>
     <string name="video">Видео</string>
     <string name="close">Закрыть</string>
-    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
-    <string name="skip">Skip</string>
-    <string name="allow">Allow</string>
-    <string name="all">All</string>
-    <string name="secure_mode_title">Secure Mode</string>
-    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="manage_media_title">Разрешите Галерее управлять Вашими медиафайлами</string>
+    <string name="manage_media_summary">Эта опция пропускает дополнительные диалоги подтверждения при выполнении различных действий, например добавления в избранные.</string>
+    <string name="skip">Пропустить</string>
+    <string name="allow">Разрешить</string>
+    <string name="all">Все</string>
+    <string name="secure_mode_title">Безопасный Режим</string>
+    <string name="secure_mode_summary">Скрывает содержимое при выходе</string>
+    <string name="rotate_screen_cd">Повернуть Экран</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
-    <string name="customization">Customization</string>
-    <string name="album_card_size_title">Album Card Size</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
-    <string name="monthly_timeline_title">Monthly Timeline</string>
-    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
-    <string name="amoled_mode_title">Use Amoled Mode</string>
-    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
-    <string name="location_chip">Location: %s</string>
-    <string name="media_details">Details</string>
-    <string name="album_card_size">Album Card Size</string>
-    <string name="edit_metadata">Edit Metadata</string>
-    <string name="dialog_to_trash">Moving to Trash</string>
-    <string name="dialog_delete">Deleting Permanently</string>
-    <string name="s_items">%1$s items</string>
-    <string name="trashing_items">Trashing %1$s items..</string>
-    <string name="deleting_items">Deleting %1$s items...</string>
-    <string name="long_press_to_remove">Long press to remove</string>
-    <string name="dialog_from_trash">Restoring from Trash</string>
-    <string name="restoring_items">Restoring %1$s items..</string>
-    <string name="trash_incompatible_title">Some items cannot be trashed!</string>
-    <string name="trash_incompatible_summary">Such items will be deleted permanently instead.</string>
-    <string name="error_toast">An error occurred!</string>
-    <string name="beta">Beta</string>
-    <string name="remove_metadata">Remove Metadata</string>
-    <string name="remove_location">Remove Location</string>
-    <string name="description">Description</string>
-    <string name="move_to_another_album">Move to another album</string>
-    <string name="move">Move</string>
+    <string name="change_album_size">Поменять Размер Альбомных Карточек</string>
+    <string name="reset">Сбросить</string>
+    <string name="customization">Персонализация</string>
+    <string name="album_card_size_title">Размер Альбомных Карточек</string>
+    <string name="album_card_size_summary">Самостоятельно выбрать размер альбомных карточек</string>
+    <string name="set_wallpaper">Обои</string>
+    <string name="set_wallpaper_error">Невозможно установить обои, приложение недоступно!</string>
+    <string name="monthly_timeline_title">Группировка по месяцу</string>
+    <string name="monthly_timeline_summary">Группирует фотографии по месяцу, а не по дате (Перезапускает приложение)</string>
+    <string name="amoled_mode_title">Режим Amoled</string>
+    <string name="amoled_mode_summary">Больше контраста, лучше всего подходит для Amoled экранов</string>
+    <string name="location_chip">Местоположение: %s</string>
+    <string name="media_details">Детали</string>
+    <string name="album_card_size">Размер Альбомных Карточек</string>
+    <string name="edit_metadata">Редактировать метаданные</string>
+    <string name="dialog_to_trash">Перемещение в Корзину</string>
+    <string name="dialog_delete">Безвозвратное Удаление</string>
+    <string name="s_items">%1$s элементов</string>
+    <string name="trashing_items">Перемещение в корзину %1$s элементов...</string>
+    <string name="deleting_items">Удаление %1$s элементов...</string>
+    <string name="long_press_to_remove">Зажмите и удержите чтобы удалить</string>
+    <string name="dialog_from_trash">Восстановление из Корзины</string>
+    <string name="restoring_items">Восстановление %1$s элементов...</string>
+    <string name="trash_incompatible_title">Некоторые элементы не могут быть перемещены в корзину!</string>
+    <string name="trash_incompatible_summary">Эти элементы будут удалены безвозвратно.</string>
+    <string name="error_toast">Произошла ошибка!</string>
+    <string name="beta">Бета</string>
+    <string name="remove_metadata">Удалить Метаданные</string>
+    <string name="remove_location">Удалить Местоположение</string>
+    <string name="description">Описание</string>
+    <string name="move_to_another_album">Переместить в другой альбом</string>
+    <string name="move">Переместить</string>
     <plurals name="item_count">
         <item quantity="one">%s пункт</item>
         <item quantity="few">%s пунктов</item>
