--- a/app/src/main/res/values-sr-rSP/strings.xml
+++ b/app/src/main/res/values-sr-rSP/strings.xml
@@ -1,133 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="share">Share</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
+    <string name="app_name">Галерија</string>
+    <string name="nav_albums">Албуми</string>
+    <string name="searchbar_title"><![CDATA[Претражите фотографије и видео снимке]]></string>
+    <string name="header_today">Данас</string>
+    <string name="header_yesterday">Јуче</string>
+    <string name="request_permissions">Затражи дозволе</string>
+    <string name="filter">Филтер</string>
+    <string name="filter_recent">Недавно</string>
+    <string name="filter_nameAZ">Име (А-Ш)</string>
+    <string name="filter_nameZA">Име (Ш-А)</string>
+    <string name="filter_old">Старо</string>
+    <string name="selected_s">Изабрано %s</string>
+    <string name="trash">Смеће</string>
+    <string name="pause_video">Паузирај видео снимак</string>
+    <string name="play_video">Пусти видео снимак</string>
+    <string name="favorites">Омиљено</string>
+    <string name="no_media_title">Овде изгледа празно</string>
+    <string name="no_media_cd">Нису пронађени медији</string>
+    <string name="empty_trash_title">Потпуно чисто</string>
+    <string name="empty_trash_cd">Смеће је празно</string>
+    <string name="error_title">Дошло је до грешке :(</string>
+    <string name="error_cd">Дошло је до грешке</string>
+    <string name="copy_error">Копирај грешку</string>
+    <string name="trash_restore">Врати</string>
+    <string name="trash_empty">Испразни</string>
+    <string name="trash_delete">Избриши</string>
+    <string name="share">Дели</string>
+    <string name="remove_selected">Уклони изабрано</string>
+    <string name="remove_all">Уклони све</string>
+    <string name="empty_favorites_title">Немате омиљено</string>
+    <string name="label">Ознака</string>
+    <string name="path">Путања</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">KB</string>
     <string name="mb">MB</string>
     <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
-    <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location_cd">Media Location</string>
-    <string name="location_map_cd">Location Map</string>
-    <string name="app_dev">by %s</string>
+    <string name="metadata">Метаподаци</string>
+    <string name="select_all">Изабери све</string>
+    <string name="unselect_all">Поништи све</string>
+    <string name="drop_down_cd">Испусти</string>
+    <string name="back_cd">Назад</string>
+    <string name="settings_title">Подешавања</string>
+    <string name="settings_general">Опште</string>
+    <string name="settings_trash_title">Користи канту за смеће</string>
+    <string name="settings_trash_summary">Чувајте избрисане медије 30 дана.\nБрисање медија ће довести до трајног губитка, ако је ово онемогућено.</string>
+    <string name="move_album_to_trash">Премести албум у смеће</string>
+    <string name="pinned_albums_title">Закачени албуми</string>
+    <string name="unpin">Откачи</string>
+    <string name="pin">Закачи</string>
+    <string name="nav_timeline">Временска линија</string>
+    <string name="location_cd">Локација медија</string>
+    <string name="location_map_cd">Мапа локације</string>
+    <string name="app_dev">од %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
-    <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate">Донирај</string>
+    <string name="github">GitHub</string>
+    <string name="donate_button_cd">Дугме „Донирај”</string>
+    <string name="github_button_cd">Дугме „GitHub”</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="use_as">Use as</string>
-    <string name="set_as">"Set as: "</string>
-    <string name="action_cancel">Cancel</string>
-    <string name="action_confirm">Confirm</string>
-    <string name="action_confirmed">Confirmed</string>
-    <string name="history_recent_title">Recent</string>
-    <string name="history_suggestions_title">Suggestions</string>
-    <string name="no_media_found">No media found</string>
-    <string name="image_add_description">Add a description</string>
-    <string name="edit_cd">edit</string>
-    <string name="settings_theme_header">Theme</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
-    <string name="edit">Edit</string>
-    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
-    <string name="open_with">Open with</string>
-    <string name="select">Select</string>
-    <string name="photos_and_videos">Photos and Videos</string>
-    <string name="photos">Photos</string>
-    <string name="videos">Videos</string>
-    <string name="photo">Photo</string>
-    <string name="video">Video</string>
-    <string name="close">Close</string>
-    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
-    <string name="skip">Skip</string>
-    <string name="allow">Allow</string>
-    <string name="all">All</string>
-    <string name="secure_mode_title">Secure Mode</string>
-    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="use_as">Користи као</string>
+    <string name="set_as">"Постави као: "</string>
+    <string name="action_cancel">Откажи</string>
+    <string name="action_confirm">Потврди</string>
+    <string name="action_confirmed">Потврђено</string>
+    <string name="history_recent_title">Недавно</string>
+    <string name="history_suggestions_title">Предлози</string>
+    <string name="no_media_found">Нису пронађени медији</string>
+    <string name="image_add_description">Додај опис</string>
+    <string name="edit_cd">измени</string>
+    <string name="settings_theme_header">Тема</string>
+    <string name="settings_follow_system_theme_title">Прати системску тему</string>
+    <string name="settings_dark_mode_title">Користи тамни режим</string>
+    <string name="selection_dialog_close_cd">Затвори дијалог за избор</string>
+    <string name="edit">Измени</string>
+    <string name="trash_deletion_warning">Фотографије и видео снимци које избришете биће уклоњени након 30 дана.</string>
+    <string name="open_with">Отвори помоћу</string>
+    <string name="select">Изабери</string>
+    <string name="photos_and_videos">Фотографије и видео снимци</string>
+    <string name="photos">Фотографије</string>
+    <string name="videos">Видео снимци</string>
+    <string name="photo">Фотографија</string>
+    <string name="video">Видео снимак</string>
+    <string name="close">Затвори</string>
+    <string name="manage_media_title">Дозволите апликацији „Галерија” да управља вашим медијима</string>
+    <string name="manage_media_summary">Ово подешавање само прескаче све додатне дијалоге за потврду док изводи различите радње, као што је означавање као омиљено.</string>
+    <string name="skip">Прескочи</string>
+    <string name="allow">Дозволи</string>
+    <string name="all">Све</string>
+    <string name="secure_mode_title">Безбедни режим</string>
+    <string name="secure_mode_summary">Сакријте преглед апликације када изађете из ње</string>
+    <string name="rotate_screen_cd">Ротација екрана</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
-    <string name="customization">Customization</string>
-    <string name="album_card_size_title">Album Card Size</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
-    <string name="monthly_timeline_title">Monthly Timeline</string>
-    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
-    <string name="amoled_mode_title">Use Amoled Mode</string>
-    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
-    <string name="location_chip">Location: %s</string>
-    <string name="media_details">Details</string>
-    <string name="album_card_size">Album Card Size</string>
-    <string name="edit_metadata">Edit Metadata</string>
-    <string name="dialog_to_trash">Moving to Trash</string>
-    <string name="dialog_delete">Deleting Permanently</string>
-    <string name="s_items">%1$s items</string>
-    <string name="trashing_items">Trashing %1$s items..</string>
-    <string name="deleting_items">Deleting %1$s items...</string>
-    <string name="long_press_to_remove">Long press to remove</string>
-    <string name="dialog_from_trash">Restoring from Trash</string>
-    <string name="restoring_items">Restoring %1$s items..</string>
-    <string name="trash_incompatible_title">Some items cannot be trashed!</string>
-    <string name="trash_incompatible_summary">Such items will be deleted permanently instead.</string>
-    <string name="error_toast">An error occurred!</string>
-    <string name="beta">Beta</string>
-    <string name="remove_metadata">Remove Metadata</string>
-    <string name="remove_location">Remove Location</string>
-    <string name="description">Description</string>
-    <string name="move_to_another_album">Move to another album</string>
-    <string name="move">Move</string>
+    <string name="change_album_size">Промените величину картице албума</string>
+    <string name="reset">Ресетуј</string>
+    <string name="customization">Прилагођавање</string>
+    <string name="album_card_size_title">Величина картице албума</string>
+    <string name="album_card_size_summary">Ручно изаберите величину картице албума</string>
+    <string name="set_wallpaper">Позадина</string>
+    <string name="set_wallpaper_error">Није могуће поставити позадину, ниједна апликација није доступна!</string>
+    <string name="monthly_timeline_title">Месечна временска линија</string>
+    <string name="monthly_timeline_summary">Групишите временску линију месечно уместо по датуму (рестартује апликацију)</string>
+    <string name="amoled_mode_title">Користи Amoled режим</string>
+    <string name="amoled_mode_summary">Већи контраст, најприкладнији за Amoled екране</string>
+    <string name="location_chip">Локација: %s</string>
+    <string name="media_details">Детаљи</string>
+    <string name="album_card_size">Величина картице албума</string>
+    <string name="edit_metadata">Измени метаподатке</string>
+    <string name="dialog_to_trash">Премештање у смеће</string>
+    <string name="dialog_delete">Трајно брисање</string>
+    <string name="s_items">%1$s предмета</string>
+    <string name="trashing_items">Бацање у смеће %1$s предмета...</string>
+    <string name="deleting_items">Брисање %1$s предмета...</string>
+    <string name="long_press_to_remove">Дуго притисните да бисте уклонили</string>
+    <string name="dialog_from_trash">Враћање из смећа</string>
+    <string name="restoring_items">Враћање %1$s предмета...</string>
+    <string name="trash_incompatible_title">Неки предмети се не могу бацити у смеће!</string>
+    <string name="trash_incompatible_summary">Уместо тога, такви предмети ће бити трајно избрисани.</string>
+    <string name="error_toast">Дошло је до грешке!</string>
+    <string name="beta">Бета</string>
+    <string name="remove_metadata">Уклони метаподатке</string>
+    <string name="remove_location">Уклони локацију</string>
+    <string name="description">Опис</string>
+    <string name="move_to_another_album">Премести у други албум</string>
+    <string name="move">Премести</string>
     <plurals name="item_count">
-        <item quantity="one">%s item</item>
-        <item quantity="few">%s items</item>
-        <item quantity="other">%s items</item>
+        <item quantity="one">%s предмет</item>
+        <item quantity="few">%s предмета</item>
+        <item quantity="other">%s предмета</item>
     </plurals>
 </resources>
