Gallery: Add setup screen for handling permissions
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,22 @@
     <string name="description">Description</string>
     <string name="move_to_another_album">Move to another album</string>
     <string name="move">Move</string>
+    <string name="some_permissions_are_not_granted">Some permissions are not granted!</string>
+    <string name="get_started">Get Started</string>
+    <string name="welcome">Welcome</string>
+    <string name="setup_summary">In order to access your media, it is required to grant the following permissions:</string>
+    <string name="required">Required</string>
+    <string name="optional">Optional</string>
+    <string name="permission_manage_media_title">• Manage Media</string>
+    <string name="permission_manage_media_summary">"    • Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
+    <string name="read_media_images">Read Media Images</string>
+    <string name="read_media_images_summary">Allows the app to show your images</string>
+    <string name="read_media_videos">Read Media Videos</string>
+    <string name="read_media_videos_summary">Allows the app to show your videos</string>
+    <string name="access_media_location">Access Media Location</string>
+    <string name="access_media_location_summary"><![CDATA[Allows the app to read location data of your images & videos]]></string>
+    <string name="internet">Internet</string>
+    <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
