Gallery: Allow users to fall back to material navbar
Adds a switch in the Settings screen where users can opt in or out for the Material Navigation components instead of the new ones.

This also allows for better animation while using the navigation rail

Fixes #174
Partial #183

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,10 @@
     <string name="access_media_location_summary"><![CDATA[Allows the app to read location data of your images & videos]]></string>
     <string name="internet">Internet</string>
     <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
+    <string name="fancy_blur">Fancy Blur</string>
+    <string name="fancy_blur_summary">Blur background in Media View</string>
+    <string name="old_navbar">Use Material Navigation</string>
+    <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
