New Crowdin updates (#200)
* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (German)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Galician)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Odia)

* New translations strings.xml (German)

* New translations strings.xml (German)

* New translations strings.xml (Korean)

* New translations strings.xml (Korean)

* New translations strings.xml (Russian)

* New translations strings.xml (Russian)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Cz

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -46,7 +46,7 @@
     <string name="settings_trash_title">Использовать корзину</string>
     <string name="settings_trash_summary">Хранит удаленные медиафайлы в памяти на 30 дней.\nВ случае отключения, медиафайлы будут немедленно удалены навсегда.</string>
     <string name="move_album_to_trash">Отправить альбом в корзину</string>
-    <string name="pinned_albums_title">Закрепленные альбомы</string>
+    <string name="pinned_albums_title">Закреплённые альбомы</string>
     <string name="unpin">Открепить</string>
     <string name="pin">Закрепить</string>
     <string name="nav_timeline">Хронология</string>
@@ -71,8 +71,8 @@
     <string name="image_add_description">Добавить описание</string>
     <string name="edit_cd">изменить</string>
     <string name="settings_theme_header">Тема</string>
-    <string name="settings_follow_system_theme_title">Следовать системной теме</string>
-    <string name="settings_dark_mode_title">Использовать Темный Режим</string>
+    <string name="settings_follow_system_theme_title">Системная</string>
+    <string name="settings_dark_mode_title">Использовать Тёмную тему</string>
     <string name="selection_dialog_close_cd">Закрыть окно выбора</string>
     <string name="edit">Изменить</string>
     <string name="trash_deletion_warning">Перемещённые Вами в корзину фотографии и видео будут полностью удалены через 30 дней.</string>
@@ -113,7 +113,7 @@
     <string name="s_items">%1$s элементов</string>
     <string name="trashing_items">Перемещение в корзину %1$s элементов...</string>
     <string name="deleting_items">Удаление %1$s элементов...</string>
-    <string name="long_press_to_remove">Зажмите и удержите чтобы удалить</string>
+    <string name="long_press_to_remove">Зажмите и удержите, чтобы удалить</string>
     <string name="dialog_from_trash">Восстановление из Корзины</string>
     <string name="restoring_items">Восстановление %1$s элементов...</string>
     <string name="trash_incompatible_title">Некоторые элементы не могут быть перемещены в корзину!</string>
@@ -125,6 +125,28 @@
     <string name="description">Описание</string>
     <string name="move_to_another_album">Переместить в другой альбом</string>
     <string name="move">Переместить</string>
+    <string name="some_permissions_are_not_granted">Некоторые разрешения не предоставлены!</string>
+    <string name="get_started">Начало</string>
+    <string name="welcome">Добро пожаловать</string>
+    <string name="setup_summary">Для доступа к вашим медиафайлам необходимо предоставить следующие разрешения:</string>
+    <string name="required">Необходимое</string>
+    <string name="optional">Необязательное</string>
+    <string name="permission_manage_media_title">- Управление медиа</string>
+    <string name="permission_manage_media_summary">"    • Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
+    <string name="read_media_images">Чтение изображений</string>
+    <string name="read_media_images_summary">Позволяет приложению отображать ваши изображения</string>
+    <string name="read_media_videos">Чтение видео</string>
+    <string name="read_media_videos_summary">Позволяет приложению отображать ваши видео</string>
+    <string name="access_media_location">Доступ к местоположению медиафайлов</string>
+    <string name="access_media_location_summary"><![CDATA[Позволяет приложению считывать данные о местоположении ваших изображений и видео]]></string>
+    <string name="internet">Интернет</string>
+    <string name="internet_summary"><![CDATA[Требуется для отображения предварительного просмотра местоположения изображений и видео]]></string>
+    <string name="fancy_blur">Причудливое размытие</string>
+    <string name="fancy_blur_summary">Размытие фона в режиме просмотра мультимедиа</string>
+    <string name="old_navbar">Использовать Material Navigation</string>
+    <string name="old_navbar_summary">Показывать старый пользовательский интерфейс панели навигации (вертикальная панель для больших экранов)</string>
+    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
+    <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
     <plurals name="item_count">
         <item quantity="one">%s пункт</item>
         <item quantity="few">%s пунктов</item>
