--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -102,29 +102,51 @@
     <string name="set_wallpaper_error">Hintergrundbild einstellen nicht möglich, keine Anwendung verfügbar!</string>
     <string name="monthly_timeline_title">Monatliche Zeitleiste</string>
     <string name="monthly_timeline_summary">Gruppieren der Zeitleiste monatlich statt pro Datum (Neustart der App)</string>
-    <string name="amoled_mode_title">Use Amoled Mode</string>
-    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
-    <string name="location_chip">Location: %s</string>
-    <string name="media_details">Details</string>
-    <string name="album_card_size">Album Card Size</string>
-    <string name="edit_metadata">Edit Metadata</string>
-    <string name="dialog_to_trash">Moving to Trash</string>
-    <string name="dialog_delete">Deleting Permanently</string>
-    <string name="s_items">%1$s items</string>
-    <string name="trashing_items">Trashing %1$s items..</string>
-    <string name="deleting_items">Deleting %1$s items...</string>
-    <string name="long_press_to_remove">Long press to remove</string>
-    <string name="dialog_from_trash">Restoring from Trash</string>
-    <string name="restoring_items">Restoring %1$s items..</string>
-    <string name="trash_incompatible_title">Some items cannot be trashed!</string>
-    <string name="trash_incompatible_summary">Such items will be deleted permanently instead.</string>
-    <string name="error_toast">An error occurred!</string>
+    <string name="amoled_mode_title">Amoled-Modus verwenden</string>
+    <string name="amoled_mode_summary">Höherer Kontrast, am besten geeignet für Amoled-Bildschirme</string>
+    <string name="location_chip">Standort: %s</string>
+    <string name="media_details">Einzelheiten</string>
+    <string name="album_card_size">Albumkartengröße</string>
+    <string name="edit_metadata">Metadaten bearbeiten</string>
+    <string name="dialog_to_trash">In den Papierkorb verschieben</string>
+    <string name="dialog_delete">Dauerhaftes Löschen</string>
+    <string name="s_items">%1$s Dateien</string>
+    <string name="trashing_items">Lösche %1$s Dateien..</string>
+    <string name="deleting_items">Lösche %1$s Dateien...</string>
+    <string name="long_press_to_remove">Langes Drücken zum Entfernen</string>
+    <string name="dialog_from_trash">Wiederherstellung aus dem Papierkorb</string>
+    <string name="restoring_items">Wiederherstellung von %1$s Dateien..</string>
+    <string name="trash_incompatible_title">Manche Dateien können nicht weggeworfen werden!</string>
+    <string name="trash_incompatible_summary">Solche Dateien werden stattdessen endgültig gelöscht.</string>
+    <string name="error_toast">Es ist ein Fehler aufgetreten!</string>
     <string name="beta">Beta</string>
-    <string name="remove_metadata">Remove Metadata</string>
-    <string name="remove_location">Remove Location</string>
-    <string name="description">Description</string>
-    <string name="move_to_another_album">Move to another album</string>
-    <string name="move">Move</string>
+    <string name="remove_metadata">Metadaten entfernen</string>
+    <string name="remove_location">Standort entfernen</string>
+    <string name="description">Beschreibung</string>
+    <string name="move_to_another_album">Zu einem anderen Album wechseln</string>
+    <string name="move">Verschieben</string>
+    <string name="some_permissions_are_not_granted">Manche Berechtigungen wurden nicht erteilt!</string>
+    <string name="get_started">Los geht\'s</string>
+    <string name="welcome">Willkommen</string>
+    <string name="setup_summary">Um auf die Medien zugreifen zu können, müssen folgende Berechtigungen erteilt werden:</string>
+    <string name="required">Erforderlich</string>
+    <string name="optional">Optional</string>
+    <string name="permission_manage_media_title">• Medien verwalten</string>
+    <string name="permission_manage_media_summary">"    • Gewährt automatisch Systembestätigungsdialoge, wenn mehrere Änderungen in den Medien anfordert werden (Favoriten umschalten, Papierkorb verwalten, Metadaten bearbeiten usw.)"</string>
+    <string name="read_media_images">Medienbilder lesen</string>
+    <string name="read_media_images_summary">Ermöglicht es der App, Ihre Bilder anzuzeigen</string>
+    <string name="read_media_videos">Medienvideos lesen</string>
+    <string name="read_media_videos_summary">Ermöglicht es der App, Ihre Videos anzuzeigen</string>
+    <string name="access_media_location">Zugriff auf Medienstandort</string>
+    <string name="access_media_location_summary"><![CDATA[Ermöglicht es der App, die Standortdaten Ihrer Bilder und Videos zu lesen]]></string>
+    <string name="internet">Internet</string>
+    <string name="internet_summary"><![CDATA[Erforderlich zur Anzeige von Standortvorschauen Ihrer Bilder und Videos]]></string>
+    <string name="fancy_blur">Phantasievolle Unschärfe</string>
+    <string name="fancy_blur_summary">Hintergrund in der Medienansicht verwischen</string>
+    <string name="old_navbar">Material Navigation verwenden</string>
+    <string name="old_navbar_summary">Die alte Navigationsleiste UI anzeigen (mit Rails für größere Bildschirme)</string>
+    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
+    <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
     <plurals name="item_count">
         <item quantity="one">%s Datei</item>
         <item quantity="other">%s Dateien</item>
