--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -10,8 +10,8 @@
     <string name="filter_recent">최신순</string>
     <string name="filter_nameAZ">이름 (A-Z)</string>
     <string name="filter_nameZA">이름 (Z-A)</string>
-    <string name="filter_old">오래된순</string>
-    <string name="selected_s">%s개 선택됨</string>
+    <string name="filter_old">오래된 순</string>
+    <string name="selected_s">%s개 항목 선택함</string>
     <string name="trash">휴지통</string>
     <string name="pause_video">동영상 일시 정지</string>
     <string name="play_video">동영상 재생</string>
@@ -22,7 +22,7 @@
     <string name="empty_trash_cd">휴지통이 비어 있습니다</string>
     <string name="error_title">뭔가 잘못되었습니다 :(</string>
     <string name="error_cd">오류가 발생했습니다</string>
-    <string name="copy_error">복사 오류</string>
+    <string name="copy_error">오류 내용 복사</string>
     <string name="trash_restore">복원</string>
     <string name="trash_empty">비우기</string>
     <string name="trash_delete">삭제</string>
@@ -30,7 +30,7 @@
     <string name="remove_selected">선택한 항목 제거</string>
     <string name="remove_all">모두 제거</string>
     <string name="empty_favorites_title">즐겨찾기가 없습니다</string>
-    <string name="label">이름</string>
+    <string name="label">라벨</string>
     <string name="path">경로</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">KB</string>
@@ -65,48 +65,48 @@
     <string name="action_cancel">취소</string>
     <string name="action_confirm">확인</string>
     <string name="action_confirmed">확인됨</string>
-    <string name="history_recent_title">Recent</string>
-    <string name="history_suggestions_title">Suggestions</string>
+    <string name="history_recent_title">최근</string>
+    <string name="history_suggestions_title">제안</string>
     <string name="no_media_found">미디어를 찾을 수 없습니다</string>
-    <string name="image_add_description">Add a description</string>
-    <string name="edit_cd">edit</string>
-    <string name="settings_theme_header">Theme</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
-    <string name="edit">Edit</string>
-    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
-    <string name="open_with">Open with</string>
-    <string name="select">Select</string>
-    <string name="photos_and_videos">Photos and Videos</string>
-    <string name="photos">Photos</string>
-    <string name="videos">Videos</string>
-    <string name="photo">Photo</string>
-    <string name="video">Video</string>
-    <string name="close">Close</string>
-    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
-    <string name="skip">Skip</string>
-    <string name="allow">Allow</string>
-    <string name="all">All</string>
-    <string name="secure_mode_title">Secure Mode</string>
-    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="image_add_description">설명 추가</string>
+    <string name="edit_cd">편집</string>
+    <string name="settings_theme_header">테마</string>
+    <string name="settings_follow_system_theme_title">시스템 설정 사용</string>
+    <string name="settings_dark_mode_title">다크 모드 사용</string>
+    <string name="selection_dialog_close_cd">선택 대화 상자 닫기</string>
+    <string name="edit">편집</string>
+    <string name="trash_deletion_warning">삭제한 동영상은 30일 뒤에 완전히 제거됩니다.</string>
+    <string name="open_with">다음으로 열기</string>
+    <string name="select">선택</string>
+    <string name="photos_and_videos">사진 및 동영상</string>
+    <string name="photos">사진</string>
+    <string name="videos">동영상</string>
+    <string name="photo">사진</string>
+    <string name="video">동영상</string>
+    <string name="close">닫기</string>
+    <string name="manage_media_title">앱에서 미디어를 관리할 수 있도록 허용</string>
+    <string name="manage_media_summary">즐겨찾기에 추가 등 다양한 상황에서 권한 확인 대화 상자가 나타나지 않게 합니다.</string>
+    <string name="skip">건너뛰기</string>
+    <string name="allow">허용</string>
+    <string name="all">모두</string>
+    <string name="secure_mode_title">보안 모드</string>
+    <string name="secure_mode_summary">앱을 종료했을 때 앱 미리보기를 숨깁니다.</string>
+    <string name="rotate_screen_cd">화면 회전</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
+    <string name="change_album_size">앨범 카드 크기 변경</string>
+    <string name="reset">초기화</string>
     <string name="customization">Customization</string>
-    <string name="album_card_size_title">Album Card Size</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
-    <string name="monthly_timeline_title">Monthly Timeline</string>
-    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
-    <string name="amoled_mode_title">Use Amoled Mode</string>
-    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
-    <string name="location_chip">Location: %s</string>
-    <string name="media_details">Details</string>
-    <string name="album_card_size">Album Card Size</string>
+    <string name="album_card_size_title">앨범 카드 크기</string>
+    <string name="album_card_size_summary">앨범 카드 크기를 직접 설정합니다.</string>
+    <string name="set_wallpaper">배경화면</string>
+    <string name="set_wallpaper_error">배경화면을 설정할 수 없습니다. 사용할 수 있는 앱이 없습니다!</string>
+    <string name="monthly_timeline_title">월간 타임라인</string>
+    <string name="monthly_timeline_summary">날짜별 대신 월별로 타임라인을 만듭니다. 설정을 적용하려면 앱을 다시 시작해야 합니다.</string>
+    <string name="amoled_mode_title">AMOLED 모드 사용</string>
+    <string name="amoled_mode_summary">고대비 모드입니다. AMOLED 화면에 권장합니다.</string>
+    <string name="location_chip">위치: %s</string>
+    <string name="media_details">세부 정보</string>
+    <string name="album_card_size">앨범 카드 크기</string>
     <string name="edit_metadata">Edit Metadata</string>
     <string name="dialog_to_trash">Moving to Trash</string>
     <string name="dialog_delete">Deleting Permanently</string>
@@ -125,6 +125,28 @@
     <string name="description">Description</string>
     <string name="move_to_another_album">Move to another album</string>
     <string name="move">Move</string>
+    <string name="some_permissions_are_not_granted">Some permissions are not granted!</string>
+    <string name="get_started">Get Started</string>
+    <string name="welcome">Welcome</string>
+    <string name="setup_summary">In order to access your media, it is required to grant the following permissions:</string>
+    <string name="required">Required</string>
+    <string name="optional">Optional</string>
+    <string name="permission_manage_media_title">• Manage Media</string>
+    <string name="permission_manage_media_summary">"    • Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
+    <string name="read_media_images">Read Media Images</string>
+    <string name="read_media_images_summary">Allows the app to show your images</string>
+    <string name="read_media_videos">Read Media Videos</string>
+    <string name="read_media_videos_summary">Allows the app to show your videos</string>
+    <string name="access_media_location">Access Media Location</string>
+    <string name="access_media_location_summary"><![CDATA[Allows the app to read location data of your images & videos]]></string>
+    <string name="internet">Internet</string>
+    <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
+    <string name="fancy_blur">Fancy Blur</string>
+    <string name="fancy_blur_summary">Blur background in Media View</string>
+    <string name="old_navbar">Use Material Navigation</string>
+    <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
+    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
+    <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
     <plurals name="item_count">
         <item quantity="other">%s개 항목</item>
     </plurals>
