--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -44,7 +44,7 @@
     <string name="settings_title">Configurações</string>
     <string name="settings_general">Geral</string>
     <string name="settings_trash_title">Usar lixeira</string>
-    <string name="settings_trash_summary">Armazenar midias apagadas durante 30 dias.\nExcluir mídia resultará em perda permanente se desativado.</string>
+    <string name="settings_trash_summary">Armazena mídias apagadas durante 30 dias.\nA exclusão de mídia resultará na perda permanente se desativado.</string>
     <string name="move_album_to_trash">Mover o álbum para a lixeira</string>
     <string name="pinned_albums_title">Álbuns fixados</string>
     <string name="unpin">Desfixar</string>
@@ -56,7 +56,7 @@
     <string name="app_dev_name">IacobIonut01</string>
     <string name="donate">Doar</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Botão doar</string>
+    <string name="donate_button_cd">Botão de Doação</string>
     <string name="github_button_cd">Botão github</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
@@ -76,55 +76,77 @@
     <string name="selection_dialog_close_cd">Fechar diálogo de seleção</string>
     <string name="edit">Editar</string>
     <string name="trash_deletion_warning">Fotos e vídeos que forem apagados serão removidos após 30 dias.</string>
-    <string name="open_with">Open with</string>
-    <string name="select">Select</string>
-    <string name="photos_and_videos">Photos and Videos</string>
-    <string name="photos">Photos</string>
-    <string name="videos">Videos</string>
-    <string name="photo">Photo</string>
-    <string name="video">Video</string>
-    <string name="close">Close</string>
-    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
-    <string name="skip">Skip</string>
-    <string name="allow">Allow</string>
-    <string name="all">All</string>
-    <string name="secure_mode_title">Secure Mode</string>
-    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
-    <string name="rotate_screen_cd">Rotate Screen</string>
+    <string name="open_with">Abrir com</string>
+    <string name="select">Selecionar</string>
+    <string name="photos_and_videos">Fotos e Vídeos</string>
+    <string name="photos">Fotos</string>
+    <string name="videos">Vídeos</string>
+    <string name="photo">Foto</string>
+    <string name="video">Vídeo</string>
+    <string name="close">Fechar</string>
+    <string name="manage_media_title">Permitir que a Gallery gerencie sua mídia</string>
+    <string name="manage_media_summary">Essa configuração simplesmente ignora os pop-ups de confirmação adicionais ao fazer várias ações, como marcar como favorito.</string>
+    <string name="skip">Pular</string>
+    <string name="allow">Permitir</string>
+    <string name="all">Todos</string>
+    <string name="secure_mode_title">Modo seguro</string>
+    <string name="secure_mode_summary">Ocultar a pré-visualização no aplicativo quando você sair dele</string>
+    <string name="rotate_screen_cd">Virar a tela</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
-    <string name="customization">Customization</string>
-    <string name="album_card_size_title">Album Card Size</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
-    <string name="monthly_timeline_title">Monthly Timeline</string>
-    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
-    <string name="amoled_mode_title">Use Amoled Mode</string>
-    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
-    <string name="location_chip">Location: %s</string>
-    <string name="media_details">Details</string>
-    <string name="album_card_size">Album Card Size</string>
-    <string name="edit_metadata">Edit Metadata</string>
-    <string name="dialog_to_trash">Moving to Trash</string>
-    <string name="dialog_delete">Deleting Permanently</string>
-    <string name="s_items">%1$s items</string>
-    <string name="trashing_items">Trashing %1$s items..</string>
-    <string name="deleting_items">Deleting %1$s items...</string>
-    <string name="long_press_to_remove">Long press to remove</string>
-    <string name="dialog_from_trash">Restoring from Trash</string>
-    <string name="restoring_items">Restoring %1$s items..</string>
-    <string name="trash_incompatible_title">Some items cannot be trashed!</string>
-    <string name="trash_incompatible_summary">Such items will be deleted permanently instead.</string>
-    <string name="error_toast">An error occurred!</string>
+    <string name="change_album_size">Alterar o tamanho do álbum</string>
+    <string name="reset">Redefinir</string>
+    <string name="customization">Personalização</string>
+    <string name="album_card_size_title">Tamanho da capa do álbum</string>
+    <string name="album_card_size_summary">Escolha manualmente o tamanho da capa do álbum</string>
+    <string name="set_wallpaper">Papel de parede</string>
+    <string name="set_wallpaper_error">Não é possível definir o papel de parede, não há aplicativo disponível!</string>
+    <string name="monthly_timeline_title">Linda do tempo em mês</string>
+    <string name="monthly_timeline_summary">Agrupar a linha do tempo em mês em vez de data (reiniciar o aplicativo)</string>
+    <string name="amoled_mode_title">Usar o modo Amoled</string>
+    <string name="amoled_mode_summary">Contraste mais alto, mais adequado para telas Amoled</string>
+    <string name="location_chip">Localização: %s</string>
+    <string name="media_details">Detalhes</string>
+    <string name="album_card_size">Tamanho da capa do álbum</string>
+    <string name="edit_metadata">Editar metadados</string>
+    <string name="dialog_to_trash">Mover para a lixeira</string>
+    <string name="dialog_delete">Exclusão permanente</string>
+    <string name="s_items">%1$s itens</string>
+    <string name="trashing_items">Excluindo %1$s itens...</string>
+    <string name="deleting_items">Apagando %1$s itens...</string>
+    <string name="long_press_to_remove">Toque longo para remover</string>
+    <string name="dialog_from_trash">Restauração da lixeira</string>
+    <string name="restoring_items">Restaurando %1$s itens..</string>
+    <string name="trash_incompatible_title">Alguns itens não podem ser descartados!</string>
+    <string name="trash_incompatible_summary">Em vez disso, esses itens serão excluídos permanentemente.</string>
+    <string name="error_toast">Ocorreu um erro!</string>
     <string name="beta">Beta</string>
-    <string name="remove_metadata">Remove Metadata</string>
-    <string name="remove_location">Remove Location</string>
-    <string name="description">Description</string>
-    <string name="move_to_another_album">Move to another album</string>
-    <string name="move">Move</string>
+    <string name="remove_metadata">Remover metadados</string>
+    <string name="remove_location">Remover localização</string>
+    <string name="description">Descrição</string>
+    <string name="move_to_another_album">Mover para outro álbum</string>
+    <string name="move">Mover</string>
+    <string name="some_permissions_are_not_granted">Algumas permissões não foram concedidas!</string>
+    <string name="get_started">Começar a usar</string>
+    <string name="welcome">Bem-vindo</string>
+    <string name="setup_summary">Para acessar sua mídia, é necessário conceder as seguintes permissões:</string>
+    <string name="required">Necessário</string>
+    <string name="optional">Opcional</string>
+    <string name="permission_manage_media_title">• Gerenciar mídia</string>
+    <string name="permission_manage_media_summary">"    • Automaticamente concede diálogos de confirmação do sistema quando você solicita várias alterações em sua mídia (alternar favoritos, gerenciar lixeira, editar metadados, etc.)"</string>
+    <string name="read_media_images">Ler imagens de mídia</string>
+    <string name="read_media_images_summary">Permite que o aplicativo mostre suas imagens</string>
+    <string name="read_media_videos">Ler os vídeos de mídia</string>
+    <string name="read_media_videos_summary">Permite que o aplicativo mostre seus vídeos</string>
+    <string name="access_media_location">Acesso à localização de mídia</string>
+    <string name="access_media_location_summary"><![CDATA[Permite que o aplicativo leia os dados de localização de suas imagens e vídeos]]></string>
+    <string name="internet">Internet</string>
+    <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
+    <string name="fancy_blur">Fancy Blur</string>
+    <string name="fancy_blur_summary">Blur background in Media View</string>
+    <string name="old_navbar">Use Material Navigation</string>
+    <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
+    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
+    <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
     <plurals name="item_count">
         <item quantity="one">%s ítem</item>
         <item quantity="other">%s ítens</item>
