--- a/app/src/main/res/values-sr-rSP/strings.xml
+++ b/app/src/main/res/values-sr-rSP/strings.xml
@@ -125,6 +125,28 @@
     <string name="description">Опис</string>
     <string name="move_to_another_album">Премести у други албум</string>
     <string name="move">Премести</string>
+    <string name="some_permissions_are_not_granted">Неке дозволе нису дате!</string>
+    <string name="get_started">Започни</string>
+    <string name="welcome">Добро дошли</string>
+    <string name="setup_summary">Да бисмо приступили вашим медијима, потребно је да дате следеће дозволе:</string>
+    <string name="required">Неопходно</string>
+    <string name="optional">Опционално</string>
+    <string name="permission_manage_media_title">• Управљање медијима</string>
+    <string name="permission_manage_media_summary">"    • Аутоматски даје системске дијалоге за потврду, када затражите неколико промена на вашем медију (укључивање омиљеих, управљање смећем, измена метаподатака итд.)"</string>
+    <string name="read_media_images">Читање слика медија</string>
+    <string name="read_media_images_summary">Дозвољава апликацији да приказује ваше слике</string>
+    <string name="read_media_videos">Читање видео снимака медија</string>
+    <string name="read_media_videos_summary">Дозвољава апликацији да приказује ваше видео снимке</string>
+    <string name="access_media_location">Приступ локацији медија</string>
+    <string name="access_media_location_summary"><![CDATA[Дозвољава апликацији да чита податке о локацији ваших слика и видео снимака]]></string>
+    <string name="internet">Интернет</string>
+    <string name="internet_summary"><![CDATA[Обавезно за приказ прегледа локације ваших слика и видео снимака]]></string>
+    <string name="fancy_blur">Фенси замагљење</string>
+    <string name="fancy_blur_summary">Замаглите позадину у приказу медија</string>
+    <string name="old_navbar">Користи Material навигацију</string>
+    <string name="old_navbar_summary">Прикажи стари кориснички интерфејс траке за навигацију (са вертикалним панелом за веће екране)</string>
+    <string name="hide_timeline_for_albums">Сакриј временску линију за албуме</string>
+    <string name="hide_timeline_for_album_summary">Сакрива заглавља датума када отварате албум</string>
     <plurals name="item_count">
         <item quantity="one">%s предмет</item>
         <item quantity="few">%s предмета</item>
