--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -60,51 +60,51 @@
     <string name="github_button_cd">Github Butonu</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="use_as">Use as</string>
-    <string name="set_as">"Set as: "</string>
+    <string name="use_as">Farklı kullan</string>
+    <string name="set_as">"Farklı ayarla: "</string>
     <string name="action_cancel">İptal et</string>
     <string name="action_confirm">Doğrula</string>
     <string name="action_confirmed">Doğrulandı</string>
-    <string name="history_recent_title">Recent</string>
-    <string name="history_suggestions_title">Suggestions</string>
-    <string name="no_media_found">No media found</string>
-    <string name="image_add_description">Add a description</string>
-    <string name="edit_cd">edit</string>
-    <string name="settings_theme_header">Theme</string>
-    <string name="settings_follow_system_theme_title">Follow System Theme</string>
-    <string name="settings_dark_mode_title">Use Dark Mode</string>
-    <string name="selection_dialog_close_cd">Close selection dialog</string>
-    <string name="edit">Edit</string>
-    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
-    <string name="open_with">Open with</string>
-    <string name="select">Select</string>
-    <string name="photos_and_videos">Photos and Videos</string>
-    <string name="photos">Photos</string>
-    <string name="videos">Videos</string>
-    <string name="photo">Photo</string>
+    <string name="history_recent_title">En son</string>
+    <string name="history_suggestions_title">Öneriler</string>
+    <string name="no_media_found">Hiçbir medya bulunamadı</string>
+    <string name="image_add_description">Bir açıklama ekleyin</string>
+    <string name="edit_cd">düzenle</string>
+    <string name="settings_theme_header">Tema</string>
+    <string name="settings_follow_system_theme_title">Sistem Temasına Uy</string>
+    <string name="settings_dark_mode_title">Koyu Mod Kullan</string>
+    <string name="selection_dialog_close_cd">Seçim diyalogunu kapat</string>
+    <string name="edit">Düzenle</string>
+    <string name="trash_deletion_warning">Sildiğiniz fotoğraflar ve videolar 30 gün sonra kaldırılacak.</string>
+    <string name="open_with">Birlikte aç</string>
+    <string name="select">Seç</string>
+    <string name="photos_and_videos">Fotoğraflar ve Videolar</string>
+    <string name="photos">Fotoğraflar</string>
+    <string name="videos">Videolar</string>
+    <string name="photo">Fotoğraf</string>
     <string name="video">Video</string>
-    <string name="close">Close</string>
-    <string name="manage_media_title">Allow Gallery to Manage your Media</string>
-    <string name="manage_media_summary">This setting just skips any extra confirmation dialogs while performing various actions like marking as favorite.</string>
-    <string name="skip">Skip</string>
-    <string name="allow">Allow</string>
-    <string name="all">All</string>
-    <string name="secure_mode_title">Secure Mode</string>
-    <string name="secure_mode_summary">Hide the app preview when you exit it</string>
+    <string name="close">Kapat</string>
+    <string name="manage_media_title">Galeri\'nin medyanızı yönetmesine izin verin</string>
+    <string name="manage_media_summary">Bu ayar, favori olarak işaretleme gibi çeşitli eylemleri gerçekleştirirken ekstra onay diyalog kutularını atlar.</string>
+    <string name="skip">Atla</string>
+    <string name="allow">İzin Ver</string>
+    <string name="all">Tümü</string>
+    <string name="secure_mode_title">Güvenli Mod</string>
+    <string name="secure_mode_summary">Uygulama arka plana alındığında uygulama ön izlemesini gizle</string>
     <string name="rotate_screen_cd">Rotate Screen</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Change Album Card Size</string>
-    <string name="reset">Reset</string>
-    <string name="customization">Customization</string>
-    <string name="album_card_size_title">Album Card Size</string>
-    <string name="album_card_size_summary">Manually pick your album card size</string>
-    <string name="set_wallpaper">Wallpaper</string>
-    <string name="set_wallpaper_error">Can\'t set wallpaper, no app available!</string>
-    <string name="monthly_timeline_title">Monthly Timeline</string>
-    <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
-    <string name="amoled_mode_title">Use Amoled Mode</string>
-    <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
-    <string name="location_chip">Location: %s</string>
+    <string name="change_album_size">Albüm Kartı Boyutunu Değiştir</string>
+    <string name="reset">Sıfırla</string>
+    <string name="customization">Özelleştirme</string>
+    <string name="album_card_size_title">Albüm Kartı Boyutu</string>
+    <string name="album_card_size_summary">Albüm kartı boyutunuzu manuel olarak seçin</string>
+    <string name="set_wallpaper">Duvar Kağıdı</string>
+    <string name="set_wallpaper_error">Duvar kağıdı olarak seçilemiyor, bu işlem için hiçbir uygulama kullanılamıyor!</string>
+    <string name="monthly_timeline_title">Aylık Zaman Çizelgesi</string>
+    <string name="monthly_timeline_summary">Zaman çizelgesini tarih yerine aylık olarak gruplandırın (Uygulamayı yeniden başlatır)</string>
+    <string name="amoled_mode_title">Amoled Modunu Kullanın</string>
+    <string name="amoled_mode_summary">Daha yüksek kontrast, amoled ekranlar için daha uygundur</string>
+    <string name="location_chip">Konum: %s</string>
     <string name="media_details">Details</string>
     <string name="album_card_size">Album Card Size</string>
     <string name="edit_metadata">Edit Metadata</string>
@@ -125,6 +125,28 @@
     <string name="description">Description</string>
     <string name="move_to_another_album">Move to another album</string>
     <string name="move">Move</string>
+    <string name="some_permissions_are_not_granted">Some permissions are not granted!</string>
+    <string name="get_started">Get Started</string>
+    <string name="welcome">Welcome</string>
+    <string name="setup_summary">In order to access your media, it is required to grant the following permissions:</string>
+    <string name="required">Required</string>
+    <string name="optional">Optional</string>
+    <string name="permission_manage_media_title">• Manage Media</string>
+    <string name="permission_manage_media_summary">"    • Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
+    <string name="read_media_images">Read Media Images</string>
+    <string name="read_media_images_summary">Allows the app to show your images</string>
+    <string name="read_media_videos">Read Media Videos</string>
+    <string name="read_media_videos_summary">Allows the app to show your videos</string>
+    <string name="access_media_location">Access Media Location</string>
+    <string name="access_media_location_summary"><![CDATA[Allows the app to read location data of your images & videos]]></string>
+    <string name="internet">Internet</string>
+    <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
+    <string name="fancy_blur">Fancy Blur</string>
+    <string name="fancy_blur_summary">Blur background in Media View</string>
+    <string name="old_navbar">Use Material Navigation</string>
+    <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
+    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
+    <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
     <plurals name="item_count">
         <item quantity="one">%s öğe</item>
         <item quantity="other">%s öğe</item>
